Add animations and improve build configuration

--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,28 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "^/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "^/favicon.svg",
+      "dest": "/favicon.svg"
+    },
+    {
+      "src": "^/sw.js",
+      "dest": "/sw.js"
+    },
+    {
+      "src": ".*",
       "dest": "/index.html"
     }
   ],
